Security: fix security alert on Runtime.getRuntime().exec
git-svn-id: https://svn.code.sf.net/p/davmail/code/trunk@3520 3d1905a2-6b24-0410-a738-b14d5a86fcbd